--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,8 @@ authors = ["David Holroyd <dave@badgers-in-foil.co.uk>"]
 edition = "2018"
 
 [dependencies]
-smpte2022-1-packet = { path = "../smpte2022-1-packet" }
-rtp-rs = { path = "../rtp-rs" }
+smpte2022-1-packet = "0.1.0"
+rtp-rs = "0.3.0"
 slab = "0.4"
 
 [dev-dependencies]
