Add license info

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "smpte2022-1-fec"
 version = "0.1.0"
 authors = ["David Holroyd <dave@badgers-in-foil.co.uk>"]
+license = "MIT/Apache-2.0"
 edition = "2018"
 
 [dependencies]
