--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,9 @@ license = "MIT/Apache-2.0"
 edition = "2018"
 
 [dependencies]
-smpte2022-1-packet = "0.2.0"
+smpte2022-1-packet = "0.3"
 rtp-rs = "0.3.0"
+arrayvec = "0.4.10"
 
 [dev-dependencies]
 hex-literal = "0.1"
