--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ edition = "2018"
 smpte2022-1-packet = "0.3"
 rtp-rs = "0.3.0"
 arrayvec = "0.4.10"
+log = "0.4"
 
 [dev-dependencies]
 hex-literal = "0.1"
@@ -21,3 +22,4 @@ hex-literal = "0.1"
 mio = "0.6"
 mio-extras = "2.0"
 socket2 = "0.3"
+env_logger = "0.6"
