--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ license = "MIT/Apache-2.0"
 edition = "2018"
 
 [dependencies]
-smpte2022-1-packet = "0.3"
+smpte2022-1-packet = "0.4"
 rtp-rs = "0.3.0"
 arrayvec = "0.4.10"
 log = "0.4"
@@ -23,3 +23,4 @@ mio = "0.6"
 mio-extras = "2.0"
 socket2 = "0.3"
 env_logger = "0.6"
+mpeg2ts-reader = "0.10"
