--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,8 +19,7 @@ log = "0.4"
 hex-literal = "0.2"
 
 # For examples
-mio = "0.7"
-mio-extras = "2.0"
+mio = { version = "0.7", features = [ "udp", "os-poll" ] }
 socket2 = "0.3"
 env_logger = "0.8"
 mpeg2ts-reader = "0.13"
